--- a/views/orderForm.html
+++ b/views/orderForm.html
@@ -22,16 +22,20 @@
         <!-- get meal -->
         <div class="form-group">
             <label class="col-sm-2 control-label">Select a meal</label>
-
             <div class="col-sm-4">
-                <input type="radio" name="meal" id="breakfast" value="breakfast"> Breakfast</input><br>
-                <input type="radio" name="meal" id="lunch" value="lunch"> Lunch</input><br>
-                <input type="radio" name="meal" id="dinner" value="dinner"> Dinner</input>
+                <repeat group="{{ @meals }}" value="{{ @meal }}">
+                    <label><input type="radio"
+                                  name="meal"
+                                  id="{{ @meal }}"
+                                  value="{{ @meal }}"> {{ ucfirst(@meal) }}
+                        </input></label><br>
+                </repeat>
             </div>
         </div>
 
         <div class="col-xs-3 ">
-            <input class="form-control btn btn-default" type="submit" value="Place Order">
+            <input class="form-control btn btn-default"
+                   type="submit" value="Next">
         </div>
     </form>
 </div>
