--- a/views/orderForm.html
+++ b/views/orderForm.html
@@ -34,8 +34,7 @@
         </div>
 
         <div class="col-xs-3 ">
-            <input class="form-control btn btn-default"
-                   type="submit" value="Next">
+            <input class="form-control btn btn-default" type="submit" value="Next">
         </div>
     </form>
 </div>
