--- a/views/orderForm2.html
+++ b/views/orderForm2.html
@@ -23,8 +23,7 @@
         </div>
 
         <div class="col-xs-3 ">
-            <input class="form-control btn btn-default"
-                   type="submit" value="Place Order">
+            <input class="form-control btn btn-default" type="submit" value="Place Order">
         </div>
     </form>
 </div>
